# catDetection

./: CMakeLists.txt  CatDetector.cpp  CatDetector.h  Face.cpp  Face.h  FaceDetector.cpp  FaceDetector.h  install_changes.sh  main.cpp  main_broken.cpp  main_old.cpp
resources/: FaceDetection.cbp
